--- a/templates/site-header.html
+++ b/templates/site-header.html
@@ -204,14 +204,14 @@ background: #707070;
                     </div>
                     <div class="col-7">
                         <div class="top-header-content text-right">
-                            <p><i class="fa fa-clock-o" aria-hidden="true"></i> Horaire: 8:00 À 17:00 <span class="mx-2"></span> | <span class="mx-2"></span> <i class="fa fa-phone" aria-hidden="true"></i> 0558137305</p>
+                            <p><i class="fa fa-clock-o" aria-hidden="true"></i> Horaire: 8:00 À 17:00 <span class="mx-2"></span> | <span class="mx-2"></span> <i class="fa fa-phone" aria-hidden="true"></i> 0560 60 00 13</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="container text-center"><a class="navbar-brand" href="/">
-                                 <h1 style="color: #ebc57b;"><strong>BODY CARE</strong></h1><small><b>Tout votre univers beauté en un clic au meilleur prix et avec le plus grand choix d’Algérie</b></small>
+                                 <h1 style="color: #ebc57b;"><strong>KRISMA BODY CARE</strong></h1>
                              </a>
                          </div>
 
