--- a/templates/OldOrder.html
+++ b/templates/OldOrder.html
@@ -2,17 +2,7 @@
 <link href="{{ url_for('static',filename='plugins/datatables/dataTables.bootstrap.css') }}" rel="stylesheet" type="text/css" />
 
 <section class="content">
-            {% with messages = get_flashed_messages(with_categories=true) %}
-          {% if messages %}
-          {% for category, message in messages%}
-            <div class="alert alert-{{ category }} alert-dismissable">
-              <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-              <h4>  <i class="icon fa fa-check"></i> Alert!</h4>
-              {{message}}
-            </div>
-          {% endfor %}
-          {% endif %}
-          {% endwith %}
+
           <!-- Default box -->
           <form action="{{url_for('.Orders')}}" method="POST" role="form">
           <div class="box">
@@ -41,8 +31,8 @@
                     </thead>
                     <tbody>
                     
-                    {% if Orders %}
-                      {% for i in Orders %}
+                    {% if old %}
+                      {% for i in old %}
                       
                     <tr role="row" class="odd">
                         <td class="sorting_1">{{i.LastName}}</td>
@@ -51,7 +41,7 @@
                         <td>{{i.Ordered_at}}</td>
                         <td style="background-color: #FF8C00; color: black;"><b>{{i.Status}}</b></td>
                         <td><div class="btn-group">
-                      <button type="submit" class="btn btn-success" value="{{i.id}}" name="valider">Valider</button>
+                      <button type="submit" class="btn btn-info" value="{{i.id}}">Action</button>
                       <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown">
                         <span class="caret"></span>
                         <span class="sr-only">Toggle Dropdown</span>
