--- a/templates/index.html
+++ b/templates/index.html
@@ -223,7 +223,7 @@
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="single-footer-widget mb-80 text-center">
                         <!-- Footer Logo -->
-                        <h1 style="color: #ebc57b;"><strong>BODY</strong></h1><small><b>CARE</b></small>
+                        <h1 style="color: #ebc57b;"><strong>KRISMA BODY</strong></h1><small><b>CARE</b></small>
 
                         <p class="mb-30">Site de vente en ligne dédié aux produits de cosmétique et d’hygiène corporelle construit depuis la France et l’Algérie par des passionnés de la beauté et du soin. Retrouvez nos conseils et tendances maquillage, coiffure, mode, beauté, bien-être ainsi que tous nos bons plans cosmétiques ! Tout votre univers beauté en un clic au meilleur prix et avec le plus grand choix d’Algérie.</p>
 
@@ -245,7 +245,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                         <!-- Open Times -->
                         <div class="open-time text-center">
                             <p>Samedi de 8.00 - 17.00</p>
-                            <p>jeudi de 8.00 - 17.00</p>
+                            <p>Vendredi de 8.00 - 17.00</p>
                         </div>
 
                         <!-- Social Info -->
@@ -265,9 +265,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
                         <!-- Contact Address -->
                         <div class="contact-address">
-                            <p>Tel: 0558137305</p>
-                            <p>E-mail: mohamedmazouni667@gmail.com</p>
-                            <p>Address: Rue de fouka, kolea. wilaya de Tipaza</p>
+                            <p>Tel: 0560 60 00 13</p>
+                            <p>Address: Dely Ibrahim bois des cars alger Deli Ibrahim, Alger, Algeria</p>
                         </div>
                     </div>
                 </div>
