--- a/templates/site-header.html
+++ b/templates/site-header.html
@@ -210,10 +210,11 @@ background: #707070;
                 </div>
             </div>
         </div>
-        <div class="container text-center"><a class="navbar-brand" href="/">
-                                 <h1 style="color: #ebc57b;"><strong>KRISMA BODY CARE</strong></h1>
+        <div class="container text-center">
+          <a class="navbar-brand" href="/">
+            <h1 style="color: #ebc57b;"><strong>KRISMA</strong> BODY CARE</h1>
                              </a>
-                         </div>
+        </div>
 
                          
 <div class="container-fluid">
